--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
+    "odpal": "node ./server/index.js npm start",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
